syntax = "proto3";

package order_service;

option go_package = "genproto/order_service";

service OrderService {
    rpc Create(CreateOrder) returns (Order) {}
    rpc GetById(OrderPrimaryKey) returns (Order) {}
    rpc GetAll(GetListOrderRequest) returns (GetListOrderResponse) {}
    rpc Update(UpdateOrder) returns (Order) {}
    rpc Delete(OrderPrimaryKey) returns (Empty) {}
}

enum TypeEnum {
    self_pickup = 0;
    delivery = 1;
}

enum PaymentEnum {
    waiting_for_payment = 0;
    collecting = 1;
    shipping = 2;
    waiting_on_branch = 3;
    finished = 4;
    cancelled = 5;
}

enum PaymentType {
    uzum = 0;
    cash = 1;
    terminal = 2;
}

message Location {
    double latitude = 1;
    double longitude = 2;
}

message Empty {}

message OrderPrimaryKey {
    string id = 1;
}

message CreateOrder {
    string external_id = 1;
    TypeEnum type = 2;
    string customer_phone = 3;
    string customer_name = 4;
    string customer_id = 5;
    PaymentType payment_type = 6;
    PaymentEnum status = 7;
    string to_address = 8;
    Location to_location = 9;
    double discount_amount = 10;
    double amount = 11;
    double delivery_price = 12;
    bool paid = 13;
    string courier_id = 14;
    string courier_phone = 15;
    string courier_name = 16;
}   


message Order {
    string id = 1;
    string external_id = 2;
    TypeEnum type = 3;
    string customer_phone = 4;
    string customer_name = 5;
    string customer_id = 6;
    PaymentType payment_type = 7;
    PaymentEnum status = 8;
    string to_address = 9;
    Location to_location = 10;
    double discount_amount = 11;
    double amount = 12;
    double delivery_price = 13;
    bool paid = 14;
    string courier_id = 15;
    string courier_phone = 16;
    string courier_name = 17;
    string created_at = 18;
    string updated_at = 19;
}

message UpdateOrder {
    string id = 1;
    string external_id = 2;
    TypeEnum type = 3;
    string customer_phone = 4;
    string customer_name = 5;
    string customer_id = 6;
    PaymentType payment_type = 7;
    PaymentEnum status = 8;
    string to_address = 9;
    Location to_location = 10;
    double discount_amount = 11;
    double amount = 12;
    double delivery_price = 13;
    bool paid = 14;
    string courier_id = 15;
    string courier_phone = 16;
    string courier_name = 17;
    int64 deleted_at = 20;
}

message GetListOrderRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListOrderResponse {
    int64 Count = 1;
    repeated Order Orders = 2;
}